# git-prompt

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  licence.txt  readme.md
source/: git-prompt.c
